--- a/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
+++ b/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
@@ -1,5 +1,5 @@
 
- <div>
+ <form [formGroup]="formFecha">
     <!--<h3>Nombre completo del proyecto (acronimo) - Nº Contabilidad</h3>-->
     <h3>{{proyecto.acronimo}} - {{proyecto.nContabilidad}}</h3>
     <div class="form-row mt-0" >
@@ -8,19 +8,22 @@
       </div>
       <div class="col-2 mt-2 ml-0">
         <span>Fin - {{proyecto.fechaCierre}}</span>
-        <input *ngIf="editarFechaActiva" type="date" class="form-control position-static" formControlName="fechaCierre" id="fechaCierre" placeholder="fecha de cierre" name="fechaCierre">
+        <input *ngIf="editarFechaActiva" type="date" class="form-control" formControlName="fechaCierre" id="fechaCierre" placeholder="fecha de cierre" name="fechaCierre">
        
       </div>
       
       <div class="col-1 mt-0">
-        <button type="button" class="btn btn-link" name="button" (click)="editarFecha()" >
-        <img src="assets/iconos/editDate.png" class="rounded" alt="Eliminar Proyecto">
+        <button *ngIf="!editarFechaActiva" type="button" class="btn btn-link" name="button" (click)="editarFecha()" >
+          <img src="assets/iconos/editDate.png" class="rounded" alt="Eliminar Proyecto">
+        </button>
+        <button *ngIf="editarFechaActiva" type="submit" class="btn btn-link" name="button" (click)="guardarFecha()" >
+          <img src="assets/iconos/guardar.png" class="rounded" alt="Eliminar Proyecto">
         </button>
       </div>
     </div>  
 
     
-  </div>
+  </form>
 <div class="row mt-4">
 
 
@@ -88,10 +91,61 @@
                 <td>{{ inv }}</td>
                 <td>{{ investigadoresProyecto[i].rol }}</td>
               </tr>
+              <tr>
+                <td colspan="2">
+                  <button type="button" class="btn btn-link" name="button" (click)="cargarNuevosUsuarios()" >
+                    <img src="assets/iconos/mas.png" class="rounded" alt="Añadir Investigador">
+                  </button>
+                </td>
+              </tr>
               
             </tbody>
           </table>
       
+      </div>
+    </div>
+  </div>
+  
+  <div class="col-md-6">
+    <!--Para mantener la tabala de añadir investigadores a la derecha-->
+  </div>
+
+  <!-- Añadir investigadores-->
+  <div class="col-md-6">
+    <div class="row">
+      <div class="col-lg-12 ml-2">
+          <form class="col-sm p-0" >
+            <table  *ngIf="editarUsuarios" class="table table-bordered table-striped text-center">
+              <thead class="thead-dark">
+                <tr>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Rol</th>
+                  <th scope="col">Añadir</th>
+                </tr>
+              </thead>
+              <tbody *ngFor="let usuario of usuarios; let i = index;">
+                  <tr>
+                    <td>{{ usuario.nombre }} {{ usuario.apellido1 }} {{ usuario.apellido2 }}</td>
+                    <td> 
+                      <select class="form-control" id="rol"  name="rol"> 
+                          <option (onload)="selected" value="Miembro del proyecto" selected >Miembro del proyecto </option>
+                          <option  value="Miembro del equipo de trabajo">Miembro del equipo de trabajo </option>
+                          <option  value="Profesor Invitado">Profesor Invitado</option>
+                      </select>
+                    </td>
+                    <td>
+                        <button type="button" class="btn btn-link" name="button" >
+                          <img src="assets/iconos/mas.png" class="rounded" alt="Quitar Investigador">
+                        </button>
+                    </td>
+                    
+                  </tr>
+                  
+                
+              </tbody>
+            </table>
+          </form>
+        
       </div>
     </div>
   </div>
