--- a/src/app/components/vista-ordenes/add-orden/add-orden.component.html
+++ b/src/app/components/vista-ordenes/add-orden/add-orden.component.html
@@ -12,13 +12,23 @@
 
       <div class="form-row mt-3">
 
-        <div class="form-group col-md-6">
+        <!--<div class="form-group col-md-6">
           <label class="texto-form">Proyecto</label>
           <select class="custom-select" formControlName="proyecto">
             <option value="" selected>Seleccione acrónimo del proyecto</option>
             <option *ngFor="let proyecto of proyectos" value="{{ proyecto.acronimo }}">{{ proyecto.acronimo }}</option>
           </select>
+        </div>-->
+
+        <div class="form-group col-md-6">
+          <label class="texto-form">Proyecto</label>
+          <select class="custom-select" formControlName="proyecto">
+            <option value="" selected>Seleccione acrónimo del proyecto</option>
+            <option *ngFor="let proyecto of misProyectos; index as i" value="{{ misProyectos[i].acronimo }}">{{ proyecto.acronimo }}</option>
+          </select>
         </div>
+
+
 
         <div class="form-group col-md-6">
           <label class="texto-form">Acreedor</label>
