--- a/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
+++ b/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
@@ -114,7 +114,7 @@
   <div class="col-md-6">
     <div class="row">
       <div class="col-lg-12 ml-2">
-          <form class="col-sm p-0" >
+          <form [formGroup]="formInvestigador" class="col-sm p-0" >
             <table  *ngIf="editarUsuarios" class="table table-bordered table-striped text-center">
               <thead class="thead-dark">
                 <tr>
@@ -127,14 +127,14 @@
                   <tr>
                     <td>{{ usuario.nombre }} {{ usuario.apellido1 }} {{ usuario.apellido2 }}</td>
                     <td> 
-                      <select class="form-control" id="rol"  name="rol"> 
+                      <select formControlName="rol" class="form-control" id="rol"  name="rol"> 
                           <option (onload)="selected" value="Miembro del proyecto" selected >Miembro del proyecto </option>
                           <option  value="Miembro del equipo de trabajo">Miembro del equipo de trabajo </option>
                           <option  value="Profesor Invitado">Profesor Invitado</option>
                       </select>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-link" name="button" >
+                        <button type="button" class="btn btn-link" name="button" (click)="anadirInvestigador(usuario)">
                           <img src="assets/iconos/mas.png" class="rounded" alt="Quitar Investigador">
                         </button>
                     </td>
