--- a/src/app/components/vista-ordenes/add-orden/add-orden.component.html
+++ b/src/app/components/vista-ordenes/add-orden/add-orden.component.html
@@ -20,9 +20,12 @@
           </select>
         </div>-->
 
+        <!--FECHA PRUEBA
+        <p>{{this.fechaOrden | date:'dd-MM-yyyy'}}</p>-->
+
         <div class="form-group col-md-6">
           <label class="texto-form">Proyecto</label>
-          <select class="custom-select" formControlName="acronimo">
+          <select class="custom-select" formControlName="acronimo" (change)="capturarValor()">
             <option value="" selected>Seleccione acrónimo del proyecto</option>
             <option *ngFor="let proyecto of misProyectos; index as i" value="{{ misProyectos[i].acronimo }}">{{ proyecto.acronimo }}</option>
           </select>
@@ -54,7 +57,8 @@
 
       <!--------------------------------------------------GASTOS----------------------------------------------------------------->
       <!--<app-gastos></app-gastos>-->
-      <div class="card-body">
+      <!--<p [hidden]="opcionSeleccionada=='0'">Has seleccionado la opcion {{misProyectos[i].acronimo}}</p>-->
+      <div class="card-body" [hidden]="!verSeleccionada">
 
         <form class="card mb-4"  [formGroup]="formGastos" >
           <h3 class="texto-form mt-3">Relación de gastos</h3>
