--- a/src/app/components/vista-ordenes/vista-ordenes.component.html
+++ b/src/app/components/vista-ordenes/vista-ordenes.component.html
@@ -30,8 +30,11 @@
     <table class="table" id="tablaOrdenes" *ngIf="ordenes?.length > 0">
       <thead class="thead-dark">
         <tr>
+
+          <th scope="col">Fecha</th>
           <th scope="col">Estado</th>
-          <th scope="col">Numeración</th>
+          <th scope="col">Concepto</th>
+          <th scope="col">Proyecto</th>
           <th scope="col">Editar</th>
           <th scope="col">Borrar</th>
         </tr>
@@ -41,8 +44,10 @@
           <td>{{orden.estado}}</td>
           <td>{{orden.numeracion}}</td>-->
           <tr *ngFor="let orden of ordenes; index as i">
+            <td>{{orden.fechaOrden | date:'dd-MM-yyyy'}}</td>
             <td>{{orden.estado}}</td>
-            <td>{{orden.numeracion}}</td>
+            <td>{{orden.concepto}}</td>
+            <td>{{orden.acronimo}}</td>
           <td>
             <button type="button" class="btn btn-link" name="button" [routerLink]="['/vistaOrdenes/verOrden/', orden.id]" >
               <img src="assets/iconos/editar.png" class="rounded" alt="Editar Orden">
