--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,8 +13,8 @@
   <!--Arriba IZQ -- Pendientes de revisar como ip-->
   <div class="row">
     <div class="col-md-6">
-      <h4 *ngIf="ordenes?.length > 0"> Revisar como IP</h4>
-      <table class="table" id="tablaOrdenes" *ngIf="ordenes?.length > 0">
+      <h4 *ngIf="listaIP?.length > 0"> Revisar como IP</h4>
+      <table class="table" id="tablaOrdenes" *ngIf="listaIP?.length > 0">
         <thead class="thead-dark">
           <tr>
             <th scope="col">Estado</th>
@@ -53,30 +53,35 @@
 
     <!--Arriba DCHA -- Ultimas aceptadas-->
     <div class="col-md-6">
-      <h4 *ngIf="ordenes?.length > 0"> Ultimas Aceptadas</h4>
-      <table class="table" id="tablaOrdenes" *ngIf="ordenes?.length > 0">
+      <h4 *ngIf="aceptadas?.length > 0"> Ultimas Aceptadas</h4>
+      <table class="table" id="tablaOrdenes" *ngIf="aceptadas?.length > 0">
         <thead class="thead-dark">
           <tr>
             <th scope="col">Estado</th>
-            <th scope="col">Numeración</th>
-            <th scope="col">Editar</th>
-            <th scope="col">Borrar</th>
+            <th scope="col">Concepto</th>
+            <th scope="col">Proyecto</th>
+            <th scope="col">Ver</th>
           </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let orden of aceptadas; index as i">
-              <td>{{orden.estado}}</td>
-              <td>{{orden.numeracion}}</td>
+            <tr *ngFor="let a of elementos[1]; index as i">
+              <td>{{aceptadas[getOrdenPagindoIndex(a, paginaActualA)].estado}}</td>
+              <td>{{aceptadas[getOrdenPagindoIndex(a, paginaActualA)].concepto}}</td>
+              <td>{{aceptadas[getOrdenPagindoIndex(a, paginaActualA)].acronimo}}</td>
             <td>
-              <button type="button" class="btn btn-link" name="button" [routerLink]="['/vistaOrdenes/verOrden/', orden.id]" >
+              <button type="button" class="btn btn-link" name="button" [routerLink]="['/vistaOrdenes/verOrden/', aceptadas[getOrdenPagindoIndex(a, paginaActualA)].id]" >
                 <img src="assets/iconos/editar.png" class="rounded" alt="Editar Orden">
               </button>
             </td>
-            <td>
-              <button type="button" class="btn btn-link" name="button" (click)="borrarOrden(orden)" >
-                <img src="assets/iconos/papelera.png" class="rounded" alt="Eliminar Orden">
-              </button>
-            </td>
+          </tr>
+          <tr><!--Los botones llaman a las funciones anterior y siguiente y actualizan a la pagina correspondiente-->
+            <button type="button" class="btn btn-link mr-2" (click) ="paginaActualA= anterior(paginaActualA, aceptadas.length, 1)">
+                <img src="assets/iconos/anterior.png" class="rounded" alt="Anterior">
+            </button>
+            
+            <button type="button" class="btn btn-link" (click) = "paginaActualA = siguiente(paginaActualA, aceptadas.length, 1)">
+                <img src="assets/iconos/siguiente.png" class="rounded" alt="Siguiente">
+            </button>
           </tr>
         </tbody>
       </table>
@@ -86,30 +91,35 @@
 <!--Pendientes de Modificar-->
   <div class="row">
     <div class="col-md-6">
-      <h4 *ngIf="ordenes?.length > 0"> Revisar como Investigador</h4>
-      <table class="table" id="tablaOrdenes" *ngIf="ordenes?.length > 0">
+      <h4 *ngIf="pendientes?.length > 0"> Revisar como Investigador</h4>
+      <table class="table" id="tablaOrdenes" *ngIf="pendientes?.length > 0">
         <thead class="thead-dark">
           <tr>
             <th scope="col">Estado</th>
-            <th scope="col">Numeración</th>
-            <th scope="col">Editar</th>
-            <th scope="col">Borrar</th>
+            <th scope="col">Concepto</th>
+            <th scope="col">Proyecto</th>
+            <th scope="col">Ver</th>
           </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let orden of pendientes; index as i">
-              <td>{{orden.estado}}</td>
-              <td>{{orden.numeracion}}</td>
+            <tr *ngFor="let a of elementos[3]; index as i">
+              <td>{{pendientes[getOrdenPagindoIndex(a,   paginaActualP)].estado}}</td>
+              <td>{{pendientes[getOrdenPagindoIndex(a,   paginaActualP)].concepto}}</td>
+              <td>{{pendientes[getOrdenPagindoIndex(a,   paginaActualP)].acronimo}}</td>
             <td>
-              <button type="button" class="btn btn-link" name="button" [routerLink]="['/vistaOrdenes/verOrden/', orden.id]" >
+              <button type="button" class="btn btn-link" name="button" [routerLink]="['/vistaOrdenes/verOrden/', pendientes[getOrdenPagindoIndex(a,  paginaActualP)].id]" >
                 <img src="assets/iconos/editar.png" class="rounded" alt="Editar Orden">
               </button>
             </td>
-            <td>
-              <button type="button" class="btn btn-link" name="button" (click)="borrarOrden(orden)" >
-                <img src="assets/iconos/papelera.png" class="rounded" alt="Eliminar Orden">
-              </button>
-            </td>
+          </tr>
+          <tr><!--Los botones llaman a las funciones anterior y siguiente y actualizan a la pagina correspondiente-->
+            <button type="button" class="btn btn-link mr-2" (click) ="paginaActualP= anterior(  paginaActualP, pendientes.length, 3)">
+                <img src="assets/iconos/anterior.png" class="rounded" alt="Anterior">
+            </button>
+            
+            <button type="button" class="btn btn-link" (click) = "  paginaActualP = siguiente(  paginaActualP, pendientes.length, 3)">
+                <img src="assets/iconos/siguiente.png" class="rounded" alt="Siguiente">
+            </button>
           </tr>
         </tbody>
       </table>
@@ -117,8 +127,8 @@
 
     
     <div class="col-md-6">
-      <h4 *ngIf="ordenes?.length > 0"> Ultimas Rechazadas</h4>
-      <table class="table" id="tablaOrdenes" *ngIf="ordenes?.length > 0">
+      <h4 *ngIf="rechazadas?.length > 0"> Ultimas Rechazadas</h4>
+      <table class="table" id="tablaOrdenes" *ngIf="rechazadas?.length > 0">
         <thead class="thead-dark">
           <tr>
             <th scope="col">Estado</th>
