--- a/src/app/components/vista-ordenes/add-orden/add-orden.component.html
+++ b/src/app/components/vista-ordenes/add-orden/add-orden.component.html
@@ -240,7 +240,7 @@
       <br>
         <a href="#"><img src="../../../../../assets/iconos/pdf.png" alt="Descargar orden pdf" width="80px"></a>
       <br><br>
-      <button class="btn btn-success" role="button" (click)="crearOrden()">Crear Orden</button>
+      <button class="btn btn-success" role="button" (click)="cargarNumProyectoOrden()">Crear Orden</button>
       <button class="btn btn-danger" role="button" (click)="cancelar()">Cancelar</button>
       <br><br>
     </form>
