vista orden gastos viaje

--- a/src/app/components/vista-ordenes/vista-orden-boton/vista-orden-boton.component.html
+++ b/src/app/components/vista-ordenes/vista-orden-boton/vista-orden-boton.component.html
@@ -4,7 +4,7 @@
     <div class="centrar">
       <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['../add-orden/add-orden.component']">Gastos generales</button>
 
-      <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['../add-orden/add-orden.component']">Viajes y Desplazamientos</button>
+      <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['../add-orden/add-orden-viajes.component']">Viajes y Desplazamientos</button>
     </div>
 
     <div>
